# space-game

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/: context.hpp  window.hpp
include/anvil/: context.hpp  device.hpp  fence.hpp  physical_device.hpp  queue.hpp  semaphore.hpp  swapchain.hpp  window.hpp
include/glfw/: context.hpp  window.hpp
source/: context.cpp  main.cpp  window.cpp
source/anvil/: context.cpp  device.cpp  fence.cpp  physical_device.cpp  queue.cpp  semaphore.cpp  swapchain.cpp  window.cpp
source/glfw/: context.cpp  window.cpp
